# dataset_iterator

./: README.md  pyproject.toml
dataset_iterator/: __init__.py  array_adapter.py  dataset.py  types.py  utils.py
tests/: test_array_adapter.py  test_dataset.py  test_dataset_iterator.py  test_list_adapter.py  test_tf_dataset_adapter.py  test_torch_dataloader_adapter.py  test_utils.py
